gatewayAPI/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echoer-route
spec:
  parentRefs:
    - name: echoer
      sectionName: http
  rules:
    - backendRefs:
        - name: golang-response-echoer-service
          kind: Service
          port: 80
